--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,10 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "mypy>=1.14.0",
     "ruff>=0.8.4",
 ]
+
+[tool.mypy]
+strict = true
+exclude = ["venv", ".venv"]
