--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Fatapi web scraper"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "beautifulsoup4>=4.12.3",
     "fastapi[standard]>=0.115.6",
     "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.7.0",
+    "requests>=2.32.3",
     "sqlalchemy>=2.0.36",
 ]
 
