feat: add scrape endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 DATABASE_URL=postgresql://postgres:password@localhost:5432/scraped
 URL_TO_SCRAPE=https://www.example.com
+API_TOKEN=super
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
+AWS_BUCKET_NAME=scraper-bucket
+AWS_ENDPOINT_URL=http://localhost:9000
