--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic-settings>=2.7.0",
     "redis>=5.2.1",
     "requests>=2.32.3",
+    "slowapi>=0.1.9",
     "sqlalchemy>=2.0.36",
 ]
 
